deploy/kustomize/overlays/baseline-ext-authz-keycloak/envoy-baseline-configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-baseline-config
  namespace: reactive-mesh-authz
data:
  envoy.yaml: |
    static_resources:
      listeners:
      - name: listener_grpc
        address:
          socket_address: { address: 0.0.0.0, port_value: 8081 }
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              codec_type: AUTO
              http2_protocol_options: {}
              route_config:
                name: local_route
                virtual_hosts:
                - name: grpc
                  domains: ["*"]
                  routes:
                  - match: { prefix: "/" }
                    route:
                      cluster: grpc_server
                      timeout: 0s
              http_filters:
              - name: envoy.filters.http.jwt_authn
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                  providers:
                    keycloak:
                      issuer: http://keycloak:8080/realms/reactive-mesh
                      remote_jwks:
                        http_uri:
                          uri: http://keycloak:8080/realms/reactive-mesh/protocol/openid-connect/certs
                          cluster: keycloak_jwks
                          timeout: 5s
                        cache_duration: 300s
                      forward: true
                      claim_to_headers:
                        - header_name: x-sub
                          claim_name: sub
                        - header_name: x-sid
                          claim_name: sid
                        - header_name: x-jti
                          claim_name: jti
                  rules:
                    - match:
                        prefix: /
                      requires:
                        provider_name: keycloak
              - name: envoy.filters.http.ext_authz
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                  transport_api_version: V3
                  failure_mode_allow: false
                  grpc_service:
                    envoy_grpc:
                      cluster_name: opa_grpc
                    timeout: 0.5s
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      clusters:
      - name: grpc_server
        connect_timeout: 1s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        http2_protocol_options: {}
        load_assignment:
          cluster_name: grpc_server
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: grpc-server, port_value: 50051 }
      - name: opa_grpc
        connect_timeout: 1s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        http2_protocol_options: {}
        load_assignment:
          cluster_name: opa_grpc
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: opa, port_value: 9191 }
      - name: keycloak_jwks
        connect_timeout: 5s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: keycloak_jwks
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address: { address: keycloak, port_value: 8080 }
    admin:
      access_log_path: /tmp/admin_access.log
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
